gcc/testsuite/rust/rustc/ui/str/str-as-char.rs
// run-rustfix

fn main() {
    println!('●●'); // { dg-error "" "" { target *-*-* } }
}

